--- a/web/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web/src/app/inventory/preorder-list/preorder-list.component.html
@@ -6,8 +6,8 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-1 col-8 p-0 ms-3">
-                                    <h2>Preorder
+                                <div class="col-md-2 col-8 p-0 ms-3">
+                                    <h2>Price List (Preorder)
                                         <button class="bg-btn" (click)="exportAsXLSX()">
                                             <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
                                                 type="button"></i>
