--- a/web/src/app/admin/employee/employee.component.html
+++ b/web/src/app/admin/employee/employee.component.html
@@ -187,9 +187,9 @@
                                     <div class="row mt-2">
                                         <div class="col-lg-12">
                                             <button type="submit" class="me-3" mat-raised-button color="primary"
-                                                [disabled]="!assignForm.valid || this.saveUpdateHide"  >Save </button>
+                                                [disabled]="!assignForm.valid || this.saveUpdateHide" >Save </button>
                                                 <button type="button" class="me-3" mat-raised-button color="primary"
-                                                [disabled]="!assignForm.valid" *ngIf="this.saveUpdateHide" (click)="updateUserShop()">Update </button>
+                                                [disabled]="!assignForm.valid" *ngIf="this.saveUpdateHide" (click)="updateUserShop()" (click)="assignForm.reset()">Update </button>
                                             <!-- <button type="button" mat-raised-button
                                             (click)="assignForm.reset()">Cancel</button> -->
                                         </div>
