--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -107,7 +107,7 @@
                             </div>
                             <!-- save product spec end -->
                         </form>
-                        <form #f="ngForm" (ngSubmit)="onSubmit();">
+                        <form #f1="ngForm" (ngSubmit)="onSubmit();">
                             <div class="row">
                                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
@@ -177,7 +177,7 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6 mb-0">
                                     <button class="mr-3" mat-raised-button color="primary"
-                                        [disabled]="!f.valid || !this.xferItem.ToShopID" >Intiate Transfer</button>
+                                        [disabled]="!f1.valid || !this.xferItem.ToShopID || xferItem.TransferCount === 0" >Intiate Transfer</button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-5 mb-0 ms-3">
                                     <button type="button" class="mr-3" mat-raised-button color="warn" (click)="formReset()">Reset</button>
@@ -212,12 +212,12 @@
                                     <select class=" form-control"
                                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                       [(ngModel)]="itemsPerPage" (change)="getList();">
-                                      <option [ngValue]="10">Show 10 Row</option>
-                                      <option [ngValue]="25">Show 25 Row</option>
-                                      <option [ngValue]="50">Show 50 Row</option>
-                                      <option [ngValue]="100">Show 100 Row</option>
-                                      <option [ngValue]="250">Show 250Row</option>
-                                      <option [ngValue]="500">Show 500 Row</option>
+                                      <option Value="10">Show 10 Row</option>
+                                      <option Value="25">Show 25 Row</option>
+                                      <option Value="50">Show 50 Row</option>
+                                      <option Value="100">Show 100 Row</option>
+                                      <option Value="250">Show 250Row</option>
+                                      <option Value="500">Show 500 Row</option>
                                     </select>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@
                         <form>
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 350px;">
-                                    <div class="table-responsive">
+                                    <div>
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;">
                                             <thead class="thead-light">
@@ -245,7 +245,7 @@
                                                     <th>Secret Code</th>
                                                     <th>Remark</th>
                                                     <th>Action</th>
-                                                    <th>PDF</th>
+                                                    <!-- <th>PDF</th> -->
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
@@ -273,9 +273,6 @@
                                                         <button (click)="openModal(content,data)"  *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferToShop ==  this.selectedShop[0]"  mat-mini-fab color="primary" class="block" (click)="selectedRowID = i"  data-mdb-toggle="modal" data-mdb-target="#exampleModal">
                                                             <mat-icon>check_circle_outline</mat-icon>
                                                         </button>
-                                                    </td>
-                                                    <td> 
-                                                        <i class="far fa-file-pdf  mr-2 pdf" > </i>
                                                     </td>
                                                 </tr>
                                             </tbody>
