--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -205,6 +205,7 @@
                                             <thead>
                                                 <tr style="white-space: nowrap;">
                                                     <th>Action</th>
+                                                    <th>Barcode</th>
                                                     <th>Product</th>
                                                     <th>PurchasePrice</th>
                                                     <th>ReturnQuantity</th>
@@ -215,6 +216,7 @@
                                                     <th>TAXAmt</th>
                                                     <th>TAXType</th>
                                                     <th>TotalAmt</th>
+                                                    <th>Remark</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -222,6 +224,7 @@
                                                     <td class="text-center">
                                                         <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
                                                     </td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Barcode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.ProductTypeName}}/{{data.ProductName}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UnitPrice }}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Quantity}}</td>
@@ -232,7 +235,7 @@
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTAmount}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTType}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.TotalAmount}}</td>
-                                                  
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Remark}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
