--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="body">
                         <!-- save purchase start -->
-                        <form #f="ngForm" autocomplete="off" (ngSubmit)="addItem()">
+                        <form #f1="ngForm" autocomplete="off" (ngSubmit)="addItem()">
                             <!-- save purchase start -->
                             <div class="row">
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 d-inline-flex">
@@ -251,8 +251,8 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 d-flex">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>TAX Type</mat-label>
-                                        <mat-select name="GSTType" [(ngModel)]="item.GSTType" #GSTTypecontrol1 required (selectionChange)="calculateFields('TotalAmount', 'total')" (blur)="calculateFields('TotalAmount', 'total');notifyGst();" >
-                                            <mat-option value="None" *ngIf="item.GSTPercentage  === 0 || item.GSTAmount === 0">None
+                                        <mat-select name="GSTType" [(ngModel)]="item.GSTType" #GSTTypeacontrol  (selectionChange)="calculateFields('TotalAmount', 'total')" (blur)="notifyGst()"required>
+                                            <mat-option value="None" *ngIf="item.GSTPercentage  === 0">None
                                             </mat-option>
                                             <mat-option  [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
                                             </mat-option>
@@ -306,7 +306,7 @@
 
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
-                                    <button *ngIf="editBtn === false" class="mr-3" type="submit" [disabled]="!f.valid || item.Quantity == 0"
+                                    <button *ngIf="editBtn === false" class="mr-3" type="submit" [disabled]="!f1.valid || item.Quantity == 0 || item.GSTPercentage === 0 && item.GSTType !== 'None' && item.GSTType !== 'NONE' && item.GSTType !== '' "
                                         mat-raised-button color="primary" >Add</button>
                                     <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
                                         mat-raised-button color="primary" (click)="editUpdate()">Update</button>
@@ -380,7 +380,7 @@
                                 </div>
                                 <div *ngIf="category === 'Charges'"
                                     class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
-                                    <button class="mr-3" (click)="calculateFields('TAmount', 'chtotal')" type="submit" [disabled]="!f.valid " mat-raised-button
+                                    <button class="mr-3" (click)="calculateFields('TAmount', 'chtotal')" type="submit" [disabled]="!f1.valid " mat-raised-button
                                         color="primary">Add</button>
                                         
                                 </div>
@@ -452,7 +452,8 @@
                                                 <tr *ngFor="let data of chargeList ; let i = index;">
                                                     <td></td>
                                                     <td class="text-center">
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" (click)="deleteCharge('Charges',i)">delete_forever</mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteCharge('Charges',i)">delete_forever</mat-icon>
+                                                    
                                                     </td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
