--- a/web/src/app/product/add-manage/add-manage.component.css
+++ b/web/src/app/product/add-manage/add-manage.component.css
@@ -5,10 +5,17 @@
     left: 76px;
 }
 
-
 .errorss {
     position: relative;
     color: #ff0000c4;
     font-size: 11px;
     top: -17px;
+}
+
+.mat-input-element:disabled {
+    color: rgb(0 0 0) !important;
+}
+
+.mat-select-disabled .mat-select-value {
+    color: rgb(0, 0, 0);
 }
