--- a/web/src/app/report/inventory-report/inventory-report.component.css
+++ b/web/src/app/report/inventory-report/inventory-report.component.css
@@ -13,3 +13,8 @@
     width: 0px !important;
     cursor: pointer !important;
 }
+
+.my_class {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(242, 32, 32) !important;
+}
