--- a/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/web/src/app/report/inventory-report/inventory-report.component.html
@@ -365,6 +365,222 @@
                             </div>
                         </div>
                         </mat-tab>
+                        <!-- Purchase Product Expiry -->
+              <mat-tab label="Purchase (Product Expiry)">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="purchaseProductExpiry()">
+                    <div class="row">
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>From</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="ProductExpiry.FromDate"
+                            #DOBcontrol />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>To</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="ProductExpiry.ToDate" />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Supplier Name</mat-label>
+                          <mat-select name="Supplier" [(ngModel)]="ProductExpiry.SupplierID" editable="true"
+                            #singleSelect>
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                              {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
+                              </span>
+                            </mat-option>
+                          </mat-select>
+                          <mat-error>
+                            Select Supplier
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="shopID" [(ngModel)]="ProductExpiry.ShopID" multiple>
+                            <mat-option [value]=0>All</mat-option>
+                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                              <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Select Product</mat-label>
+                          <mat-select name="FieldType" [(ngModel)]="ProductExpiry.ProductCategory"
+                            (selectionChange)="getFieldList1()" required #Typecontrol>
+                            <mat-option [value]=0>All</mat-option>
+                            <mat-option *ngFor="let prod of prodList   let i = index;" [value]="prod.ID">
+                              {{prod.Name | uppercase}}
+                            </mat-option>
+                          </mat-select>
+                          <mat-error>
+                            Select Product Type
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                      <!-- spec start -->
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0"
+                        *ngFor="let spec of specList1 ; let i = index;">
+                        <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
+                          <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
+                            <mat-label>{{spec.FieldName}}</mat-label>
+                            <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
+                              (selectionChange)="getFieldSupportData1(i)" editable="true"
+                              [required]="spec.Required === 1" #singleSelect>
+                              <mat-option>
+                              </mat-option>
+                              <mat-option *ngFor="let val of spec.SptFilterData" [value]="val.TableValue">
+                                {{val.TableValue}}
+                              </mat-option>
+                            </mat-select>
+                            <mat-error>
+                              {{spec.FieldName}} is Required
+                            </mat-error>
+                          </mat-form-field>
+                        </div>
+                        <div *ngIf="spec.FieldType === 'Text'" class="d-flex">
+                          <mat-form-field class=" mr-0 mb-0">
+                            <mat-label>{{spec.FieldName}}</mat-label>
+                            <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
+                              [required]="spec.Required === 1" (blur)="getFieldSupportData1(i)">
+                            <mat-error>
+                              {{spec.FieldName}} is Required
+                            </mat-error>
+                          </mat-form-field>
+                        </div>
+                        <div *ngIf="spec.FieldType === 'Date'" class="d-flex">
+                          <mat-form-field class=" mr-0 mb-0">
+                            <mat-label>{{spec.FieldName}}</mat-label>
+                            <input type="date" matInput name="{{spec.FieldName+'3'}}" [(ngModel)]="spec.SelectedValue"
+                              editable="true" [required]="spec.Required === 1">
+                            <mat-error>
+                              {{spec.FieldName}} is Required
+                            </mat-error>
+                          </mat-form-field>
+                        </div>
+                        <div *ngIf="spec.FieldType === 'boolean'" class="d-flex">
+                          <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary" class="example-margin"
+                            #Multiplecontrolx [(ngModel)]="spec.SelectedValue">
+                            {{spec.FieldName}}</mat-slide-toggle>
+                        </div>
+                      </div>
+                      <!--  spec end -->
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>GST Type</mat-label>
+                          <mat-select name="GSTType" [(ngModel)]="ProductExpiry.GSTType" #singleSelect>
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>GSTPercentage</mat-label>
+                          <mat-select name="GSTPercentage" [(ngModel)]="ProductExpiry.GSTPercentage">
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option value="12">12%</mat-option>
+                            <mat-option value="18">18%</mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                        <button class="me-3" type="submit" mat-raised-button color="primary"> Search </button>
+                        <button type="button" mat-raised-button color="warn" (click)="productExpiryFromReset()"> Reset </button>
+                      </div>
+                    </div>
+                  </form>
+                  <!--  list -->
+                  <div class="body p-2">
+                    <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="ProductExpiry">
+                        <thead>
+                          <tr style="white-space: nowrap;">
+                            <th>S.No</th>
+                            <th>InvoiceNo</th>
+                            <th>InvoiceDate</th>
+                            <th>Product Category</th>
+                            <th>Product Name</th>
+                            <th>Current Shop</th>
+                            <th>Supplier</th>
+                            <th>Quantity</th>
+                            <th>Unit Price</th>
+                            <th>Discount</th>
+                            <th>SubTotal</th>
+                            <th>GST%</th>
+                            <th>GSTAmount</th>
+                            <th>GSTType</th>
+                            <th>GrandTotal</th>
+                            <th>PaymentStatus</th>
+                            <th>Retail Price</th>
+                            <th>WholeSale Price</th>
+                            <th>Product ExpiryDate</th>
+                          </tr>
+                          <tr class="totolRow" *ngIf="this.ExpirytotalQty != null && this.ExpirytotalQty != '' ">
+                            <td>
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSXExpiry()">
+                              </i>
+                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;">
+                              </i>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>{{this.ExpirytotalQty}}</td>
+                            <td></td>
+                            <td>{{this.ExpirytotalDiscount}}</td>
+                            <td>{{this.ExpirytotalUnitPrice}}</td>
+                            <td></td>
+                            <td (click)="openModal2(content2)">
+                              {{this.ExpirytotalGstAmount}}</td>
+                            <td></td>
+                            <td>{{this.ExpirytotalAmount}}</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+                           <tr  *ngFor="let s of ProductExpiryList; let i = index" >
+                            <td [ngClass]="{'my_class': s.Color === true}">{{ i+1 }}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.InvoiceNo}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.PurchaseDate}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductTypeName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ShopName}}<span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.SupplierName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.Quantity}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.UnitPrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.DiscountAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.SubTotal}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTPercentage}}%</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTType}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.TotalAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.PaymentStatus}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.RetailPrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.WholeSalePrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductExpDate}}</td>
+                           </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
                       </mat-tab-group>
                     </div>
                 </div>
@@ -403,4 +619,37 @@
             </table>
         </div>
     </div>
+</ng-template>
+
+<!--ProductExpiry model -->
+<ng-template #content2 role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+      <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <div class="row">
+          <table class="table table-striped table-hover table-sm table-bordered"
+              style="border: 2px solid #fff !important;">
+              <thead>
+                  <tr>
+                      <th>GSTType</th>
+                      <th>GSTAmount</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr class="text-center" *ngFor="let gst of gstExpirys let i = index;">
+                      <td>{{gst.GSTType}}</td>
+                      <td>{{gst.Amount}}</td>
+                  </tr>
+              </tbody>
+              <tfoot class="text-center">
+                  <tr>
+                      <th style="color: red; font-weight: 600;">Total Amt</th>
+                      <th style="color: red; font-weight: 600;">{{this.ExpirytotalGstAmount}}</th>
+                  </tr>
+              </tfoot>
+          </table>
+      </div>
+  </div>
 </ng-template>
