--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -47,18 +47,18 @@
                                 <!-- Customer from start  -->
                                 <div class="col-md-6 col-12">
                                     <div class="row">
-                                        <!-- <div class="col-xl-2 col-lg-2 col-md-6 col-sm-2 col-2 mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-2 col-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Select Position </mat-label>
                                                 <mat-select name="Position" [(ngModel)]="data.Gender" #Gendercontrol
                                                     required>
-                                                    <mat-option value="MR">MR.</mat-option>
+                                                    <mat-option value="MR">Mr.</mat-option>
                                                     <mat-option value="Miss">Miss.</mat-option>
-                                                    <mat-option value="DR">DR.</mat-option>
+                                                    <mat-option value="DR">Dr.</mat-option>
                                                     <mat-option value="ADV">ADV.</mat-option>
                                                 </mat-select>
                                             </mat-form-field>
-                                        </div> -->
+                                        </div>
                                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10 col-10 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label> Name</mat-label>
