--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -574,3 +574,17 @@ user-select: none;
     padding-right: 1px;
 }
 
+// .mat-form-field-flex {
+//     display: inline-flex;
+//     align-items: baseline;
+//     box-sizing: border-box;
+//     width: 100%;
+//     background: #f4f4f4b5 !important;
+//     border: 1px solid #cecece !important;
+//     border-radius: 2px !important;
+// }
+
+// .mat-form-field-infix {
+//     padding: 0.5em !important;
+//      border-top: 0.0em solid transparent;
+// }
