--- a/web/src/app/inventory/purchase/purchase.component.css
+++ b/web/src/app/inventory/purchase/purchase.component.css
@@ -45,6 +45,19 @@
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
+.edit_icon1{
+    background: #1c1a9c;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 18px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;  
+}
+
 .restore{
     background: #14a44d;
     border-radius: 24px;
