--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -191,7 +191,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Purchase Price</mat-label>
-                                        <input matInput name="UnitPrice"  [(ngModel)]="item.UnitPrice" required
+                                        <input matInput name="UnitPrice" min="0"  type="number" [(ngModel)]="item.UnitPrice" required
                                             #UnitPricecontrol [autocomplete]="false" (blur)="calculateFields('UnitPrice', 'subTotal')">
                                         <mat-error>
                                             Unit Price is required
@@ -201,7 +201,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
-                                        <input matInput name="Quantity" [(ngModel)]="item.Quantity" required
+                                        <input matInput name="Quantity" min="0"  type="number" [(ngModel)]="item.Quantity" required
                                             #Quantitycontrol [autocomplete]="false" (blur)="calculateFields('Quantity', 'subTotal')">
                                         <mat-error>
                                             Quantity is required
@@ -212,9 +212,9 @@
                                     <mat-form-field  >
                                         <mat-label>Discount% / Amt</mat-label>
                                         <div class="d-flex">
-                                        <input matInput name="Discount" [(ngModel)]="item.DiscountPercentage"
+                                        <input matInput name="Discount" min="0"  type="number" [(ngModel)]="item.DiscountPercentage"
                                         required #Discountcontrol (change)="calculateFields('DiscountPercentage', 'discount')"> /
-                                          <input matInput name="DAmount" [(ngModel)]="item.DiscountAmount" required #DAmountcontrol (change)="calculateFields('DiscountAmount', 'discount')">
+                                          <input matInput name="DAmount" min="0"  type="number" [(ngModel)]="item.DiscountAmount" required #DAmountcontrol (change)="calculateFields('DiscountAmount', 'discount')">
                                         </div>
                                         <mat-error>
                                             Discount is required
@@ -224,7 +224,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Sub Total</mat-label>
-                                        <input matInput name="SubTotal" [(ngModel)]="item.SubTotal" [disabled]='true'
+                                        <input matInput name="SubTotal" min="0"  type="number" [(ngModel)]="item.SubTotal" [disabled]='true'
                                             required #SubTotalcontrol [autocomplete]="false">
                                         <mat-error>
                                             Sub Total is required
@@ -236,9 +236,9 @@
                                         <mat-label>(TAX/VAT)% / Amt </mat-label>
                                         <div class="d-flex">
                                            <div class="d-flex">
-                                               <input matInput name="GST" [(ngModel)]="item.GSTPercentage" required #GSTcontrol
+                                               <input matInput name="GST" min="0"  type="number" [(ngModel)]="item.GSTPercentage" required #GSTcontrol
                                                 [autocomplete]="false" (blur)="calculateFields('GSTPercentage', 'gst')"> /
-                                               <input matInput name="GSTAmt" [(ngModel)]="item.GSTAmount" required
+                                               <input matInput name="GSTAmt" min="0"  type="number" [(ngModel)]="item.GSTAmount" required
                                                  #GSTAmtcontrol [autocomplete]="false" (blur)="calculateFields('GSTAmount', 'gst')">
                                             </div>
                                             <mat-checkbox *ngIf="item.GSTPercentage !== 0 && item.GSTPercentage !== '0'" name="gstperLock" color="primary" [(ngModel)]="gstperLock"></mat-checkbox>
@@ -266,7 +266,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ms-2">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Total Amount</mat-label>
-                                        <input matInput name="TotalAmount" [(ngModel)]="item.TotalAmount"
+                                        <input matInput name="TotalAmount" min="0"  type="number" [(ngModel)]="item.TotalAmount"
                                             [disabled]=true required #TotalAmountcontrol [autocomplete]="false">
                                         <mat-error>
                                             Total Amount is required
@@ -276,7 +276,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Retail Rate</mat-label>
-                                        <input matInput name="SaleRate" [(ngModel)]="item.RetailPrice" required
+                                        <input matInput name="SaleRate" min="0"  type="number" [(ngModel)]="item.RetailPrice" required
                                             #SaleRatecontrol [autocomplete]="false">
                                         <mat-error>
                                             Sale Rate is required
@@ -286,7 +286,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Wholesale Rate</mat-label>
-                                        <input matInput name="WSaleRate" [(ngModel)]="item.WholeSalePrice" required
+                                        <input matInput name="WSaleRate" min="0"  type="number" [(ngModel)]="item.WholeSalePrice" required
                                             #WSaleRatecontrol [autocomplete]="false">
                                         <mat-error>
                                             Sale Rate is required
@@ -311,8 +311,8 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" [disabled]="!f1.valid || item.Quantity == 0 || item.GSTPercentage === 0 &&  item.GSTType !== 'None' && item.GSTType !== 'NONE' || item.GSTType === '' "
                                         mat-raised-button color="primary" >Add</button>
-                                    <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
-                                        mat-raised-button color="primary" (click)="editUpdate()">Update</button>
+                                    <!-- <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
+                                        mat-raised-button color="primary" (click)="editUpdate()">Update</button> -->
                                 </div>
                             </div>
                             <!-- save calculation product end -->
@@ -430,7 +430,7 @@
                                                     <td class="text-center">
                                                         <mat-icon *ngIf="data.Status != 0 && data.ID !== null" class="print_icon ">print</mat-icon>
                                                         <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
-                                                        <mat-icon class="edit_icons ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null">edit </mat-icon>
+                                                        <!-- <mat-icon class="edit_icons ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null">edit </mat-icon> -->
                                                         <mat-icon  class="edit_icon1 ms-1"  (click)="showInput(data)" *ngIf="data.Status != 0 && data.ID !== null && !data.UpdateProduct" >edit </mat-icon>
                                                         <mat-icon  class="edit_icon1 ms-1"  (click)="showInput(data) ;updataEditProdcut('','',data)" *ngIf="data.Status != 0 && data.ID !== null && data.UpdateProduct" >save </mat-icon>
                                                     </td>
@@ -439,25 +439,25 @@
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.ProductName}}</td>
                                                     <td *ngIf="!data.UpdateProduct"  class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UnitPrice }}</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.UnitPrice" (ngModelChange)="data.UnitPrice = onChange($event)" (change)="updataEditProdcut('UnitPrice', 'subTotal',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.UnitPrice" (ngModelChange)="data.UnitPrice = onChange($event)" (change)="updataEditProdcut('UnitPrice', 'subTotal',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Quantity}}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountPercentage}}%</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.DiscountPercentage" (ngModelChange)="data.DiscountPercentage = onChange($event)" (change)="updataEditProdcut('DiscountPercentage', 'discount',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.DiscountPercentage" (ngModelChange)="data.DiscountPercentage = onChange($event)" (change)="updataEditProdcut('DiscountPercentage', 'discount',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountAmount}}</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.DiscountAmount" (ngModelChange)="data.DiscountAmount = onChange($event)" (change)="updataEditProdcut('DiscountAmount', 'discount',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.DiscountAmount" (ngModelChange)="data.DiscountAmount = onChange($event)" (change)="updataEditProdcut('DiscountAmount', 'discount',data)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td  class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.SubTotal }}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTPercentage}}%</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.GSTPercentage" (ngModelChange)="data.GSTPercentage = onChange($event)"  #name="ngModel" (change)="updataEditProdcut('GSTPercentage', 'gst',data)" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.GSTPercentage" (ngModelChange)="data.GSTPercentage = onChange($event)"  #name="ngModel" (change)="updataEditProdcut('GSTPercentage', 'gst',data)" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTAmount}}</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.GSTAmount" (ngModelChange)="data.GSTAmount = onChange($event)"  #name="ngModel" (change)="updataEditProdcut('GSTAmount', 'gst',data)"  [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.GSTAmount" (ngModelChange)="data.GSTAmount = onChange($event)"  #name="ngModel" (change)="updataEditProdcut('GSTAmount', 'gst',data)"  [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >
                                                         {{data.GSTType}}
@@ -473,11 +473,11 @@
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.TotalAmount}}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.RetailPrice}}</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.RetailPrice" (ngModelChange)="data.RetailPrice = onChange($event)"  (change)="updataEditProdcut('','',data)"  #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.RetailPrice" (ngModelChange)="data.RetailPrice = onChange($event)"  (change)="updataEditProdcut('','',data)"  #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.WholeSalePrice}}</td>
                                                     <td *ngIf="data.UpdateProduct" style=" width:60px;text-align: center;">
-                                                        <input style=" width:60px;text-align: center;" type="number" [(ngModel)]="data.WholeSalePrice" (ngModelChange)="data.WholeSalePrice = onChange($event)" (change)="updataEditProdcut('','',data)"  #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width:60px;text-align: center;" min="0"  type="number" [(ngModel)]="data.WholeSalePrice" (ngModelChange)="data.WholeSalePrice = onChange($event)" (change)="updataEditProdcut('','',data)"  #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                                         <span *ngIf="data.BrandType == 0">None</span>
